--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
-<body>
-  <div id="root"></div>
-  <!-- Dependencies -->
-  <script src="./node_modules/react/umd/react.development.js"></script>
-  <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-  <!-- js -->
-  <script src="./dist/index.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>TypeScript + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
